--- a/app/src/main/res/layout/cadastro_programa_fazenda.xml
+++ b/app/src/main/res/layout/cadastro_programa_fazenda.xml
@@ -1,20 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp">
-
-    <TextView
-        android:id="@+id/textView59"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:fontFamily="@font/acme"
-        android:text="@string/criar_programa_intro"
-        android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
-        android:textSize="32sp" />
 
 
     <TextView
@@ -25,7 +14,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editNomeDialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -41,7 +30,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editComplementoText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -49,7 +38,7 @@
         android:inputType="textPersonName" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/cadastrarDialogButton"
         android:layout_width="250dp"
         android:layout_height="48dp"
         android:layout_gravity="center"
