--- a/app/src/main/res/layout/resultados_fazenda.xml
+++ b/app/src/main/res/layout/resultados_fazenda.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:fontFamily="@font/acme"
+            android:fontFamily="@font/roboto"
             android:text="@string/resultados_fazenda"
             android:textAlignment="center"
             android:textColor="@color/colorPrimary"
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:fontFamily="@font/acme"
+            android:fontFamily="@font/roboto"
             android:text="@string/indicadores_economicos"
             android:textColor="@color/colorPrimary"
             android:textSize="24sp" />
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:fontFamily="@font/acme"
+            android:fontFamily="@font/roboto"
             android:text="@string/lucro_fazenda"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
 
-            android:fontFamily="@font/acme"
+            android:fontFamily="@font/roboto"
             android:text="@string/margem_liquida"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
@@ -57,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:fontFamily="@font/acme"
+            android:fontFamily="@font/roboto"
             android:text="@string/margem_bruta"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
@@ -67,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:fontFamily="@font/acme"
+            android:fontFamily="@font/roboto"
             android:text="@string/resultado_por_atividade"
             android:textAlignment="center"
             android:textColor="@color/colorPrimary"
