--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -123,7 +123,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:fontFamily="@font/acme"
+        android:fontFamily="@font/roboto"
         android:text="@string/cadastre_info_intro"
         android:textColor="@android:color/white"
         android:textSize="36sp" />
