--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -124,7 +124,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:fontFamily="@font/acme"
+        android:fontFamily="@font/roboto"
         android:text="@string/login_intro"
         android:textColor="@android:color/white"
         android:textSize="40sp" />
