--- a/app/src/main/res/layout/cadastro_programa_fazenda.xml
+++ b/app/src/main/res/layout/cadastro_programa_fazenda.xml
@@ -9,6 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
         android:text="@string/nome_intro"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold" />
@@ -25,6 +26,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
         android:text="@string/senha_intro_value"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold" />
