--- a/app/src/main/res/layout/item_fazenda_listagem.xml
+++ b/app/src/main/res/layout/item_fazenda_listagem.xml
@@ -6,7 +6,7 @@
     android:padding="8dp">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/farmTextViewListagem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -14,7 +14,7 @@
         android:textAlignment="center" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/programaTextViewListagem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
