--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -6,4 +6,9 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_metas"
+        android:orderInCategory="100"
+        android:title="@string/metas_intro"
+        app:showAsAction="never" />
 </menu>
